Client Signature Required true requires also AuthnRequestsSigned be true